# backlog-synthesizer

./: .env.example  .gitignore  ARCHITECTURE.md  CAPSTONE_REQUIREMENTS_CHECKLIST.md  DEMO_PRESENTATION.md  EVALUATION_IMPLEMENTATION_SUMMARY.md  PROJECT_SETUP_SUMMARY.md  README.md  cli.py  demo.py  pyproject.toml
docs/: COST_OPTIMIZATION.md  DEMO_AND_DEFENSE_STRATEGY.md  IMPLEMENTATION_PLAN.md  LANGGRAPH_ARCHITECTURE.md  backlog_synthesizer_requirements.md  backlog_synthesizer_stories.csv  diagrams.md
docs/capstone/: CAPSTONE_REQUIREMENTS_CHECKLIST.md  EVALUATION_PLAN.md  README.md
docs/confluence_adr_templates/: ADR-001-Monolith-First-Strategy.md  ADR-002-Technology-Stack-Decisions.md  ADR-003-API-Standards-And-Versioning.md  ADR-004-Security-Requirements.md  ADR-005-Event-Driven-Architecture-For-Async-Tasks.md  README.md
golden_dataset/: README.md
golden_dataset/scenario_01_authentication/: expected_requirements.json  expected_stories.json  input_transcript.txt  metadata.json
scripts/: README.md  demo_langgraph.py  inspect_checkpoints.py  test_extraction.py  test_full_pipeline.py  test_langgraph_workflow.py
src/agents/: analysis_agent.py  jira_integration_agent.py  story_generation_agent.py
src/agents/prompts/: extraction_prompt.py  story_generation_prompt.py
src/integrations/: __init__.py  confluence_context.py
src/memory/: __init__.py  vector_engine.py
src/orchestration/: __init__.py  audit.py  graph.py  state.py
src/tools/: chunking.py
tests/: test_analysis_agent.py  test_e2e_integration.py  test_jira_gap_detection.py  test_vector_memory_integration.py  test_vector_memory_simple.py
tests/fixtures/: sample_transcript_001.txt  small_transcript.txt
tools/: __init__.py  evaluate.py  evaluation_utils.py  llm_judge.py
