[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backlog-synthesizer"
version = "0.1.0"
description = "AI-powered multi-agent system for synthesizing customer transcripts into user stories"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Brandon Black", email = "brandon@example.com"}
]
keywords = ["ai", "llm", "langchain", "langgraph", "product-management", "jira"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core LLM & Orchestration
    "langchain>=0.1.0,<0.2.0",
    "langgraph>=0.0.40,<0.1.0",
    "anthropic>=0.18.0,<0.19.0",
    "langsmith>=0.0.87,<0.1.0",

    # Vector DB & Embeddings
    "chromadb>=0.4.22,<0.5.0",
    "openai>=1.12.0,<2.0.0",
    "sentence-transformers>=2.2.0,<3.0.0",

    # State Management
    "redis>=5.0.1,<6.0.0",

    # Document Processing
    "pdfplumber>=0.10.3,<0.11.0",
    "python-docx>=1.1.0,<2.0.0",
    "pymupdf>=1.23.0,<2.0.0",
    "markdown>=3.5.0,<4.0.0",

    # API & Web
    "fastapi>=0.109.0,<0.110.0",
    "uvicorn[standard]>=0.27.0,<0.28.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-multipart>=0.0.6,<0.1.0",

    # JIRA Integration
    "jira>=3.6.0,<4.0.0",
    "atlassian-python-api>=3.41.0,<4.0.0",

    # Testing & Evaluation
    "pytest>=7.4.4,<8.0.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "scikit-learn>=1.4.0,<2.0.0",

    # CLI
    "click>=8.1.7,<9.0.0",
    "rich>=13.7.0,<14.0.0",
    "typer>=0.9.0,<0.10.0",

    # Utilities
    "python-dotenv>=1.0.0,<2.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "requests>=2.31.0,<3.0.0",
    "tenacity>=8.2.3,<9.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/bmblack/backlog-synthesizer"
Documentation = "https://github.com/bmblack/backlog-synthesizer/docs"
Repository = "https://github.com/bmblack/backlog-synthesizer"

[project.scripts]
backlog-synth = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
